--- a/my-project/public/css/Header.css
+++ b/my-project/public/css/Header.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap');
+@import 'flowbite/dist/flowbite.css';
 
 * {
     box-sizing: border-box;
