--- a/my-project/public/css/cuerpo.css
+++ b/my-project/public/css/cuerpo.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 html{
     background-image: url(../img/fondo2.jpg);
     background-size: cover;
@@ -17,22 +18,28 @@ html{
     color: #9fa3a9;
 }
 #frase strong{
-    color: #393d42;
+    color: #bcbcbd;
+    font-size: 35px;
+}
+#frase cite{
+    color: #bcbcbd;
+    font-size: 35px;
 }
 #titulo2, #titulo3{
     font-family: "Lora", serif;
     letter-spacing: 2px;
     font-weight: 800 ;
-    font-size: 100px;
+    font-size: 150px;
     color: #9fa3a9;
    
 }
 
 #titulo1 {
-    font-family:  "EB Garamond", serif;
+    font-family:  "Playfair Display", serif;
+    font-style: italic;
     letter-spacing: 2px;
     font-weight: lighter;
-    font-size: 100px; 
+    font-size: 150px; 
     color: #9fa3a9;
     
 }
@@ -93,18 +100,46 @@ html{
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+.titulos {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center;     /* Alinea verticalmente si es necesario */
+    gap: 15px; /* Añade espacio entre los títulos */
+    padding-top: 80px; 
+   padding-bottom: 10px;
+   
+}
 
-.info h2 {
+#stitulo2 {
     font-family: 'Playfair Display', serif;
-    font-size: 2.5rem;
+    font-style: italic;
+    font-size: 3.5rem;
+    font-weight: lighter;
     color: #666;
     margin-bottom: 15px;
+    
+}
+#stitulo1, #stitulo3{
+    font-family: "Lora", serif;
+    font-size: 3.5rem;
+    font-weight: 800 ;
+    color: #666;
+    margin-bottom: 15px;
+   
+}
+
+.stitulos {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 15px; /* Añade espacio entre los títulos */
+    
 }
 
 .info p {
-    font-family: 'Lora', serif;
+    
     font-size: 1rem;
-    color: #9fa3a9;
+    color: #666;
     line-height: 1.6;
     margin-bottom: 10px;
     animation: slide 5s linear infinite; /* Aplica la animación deseada */
@@ -123,39 +158,35 @@ html{
 
 
 .demas_info {
-    background:transparent; /* Fondo blanco más transparente */
-    border: 1px solid #9fa3a9 ; /* Borde blanco semitransparente */
-    backdrop-filter: blur(10px); /* Efecto de desenfoque para el fondo */
-    border-radius: 15px; /* Bordes más redondeados */
-    padding: 25px; /* Espaciado interno */
-    margin: 20px auto; /* Centrar la sección y añadir margen */
-    max-width: 800px; /* Ancho máximo */
-    box-shadow: 0px 6px 15px #393d42; /* Sombra más suave pero más prominente */
+    background: rgba(255, 255, 255, 0.9); /* Fondo blanco con opacidad del 90% */
+    padding: 50px; /* Espaciado interno */
     transition: transform 0.3s ease, box-shadow 0.3s ease; /* Animación para hover */
+    backdrop-filter: blur(20px); /* Efecto de desenfoque para el fondo */
 }
+
 .demas_info:hover {
     transform: translateY(-10px); /* Efecto flotante */
-    box-shadow: 0px 8px 20px #393d42; /* Sombra más pronunciada al hacer hover */
 }
 
 .Historia {
-    font-family: 'Lora', serif; /* Fuente elegante */
-    font-size: 36px; /* Tamaño grande */
-    font-weight: 700;
-    color: #393d42; /* Texto blanco para destacar en fondo oscuro */
+    font-family: "Lora", serif;
+    letter-spacing: 2px;
+    font-weight: 800 ;
+    font-size: 50px;
+    color: #000000ab; /* Texto blanco para destacar en fondo oscuro */
     text-align: center;
-    margin-bottom: 15px;
-    text-shadow: 1px 1px 2px #9fa3a9; /* Sombra suave para mejorar la legibilidad */
+    margin-bottom: 10px;
+    
 }
 
 .demas_info p {
-    font-family: 'EB Garamond', serif; /* Fuente para el texto */
-    font-size: 18px;
+    font-family: 'Lora', serif; /* Fuente para el texto */
+    font-size: 20px;
     line-height: 1.6;
-    color: #9fa3a9; /* Texto gris claro para resaltar sobre el fondo */
-    margin-bottom: 15px;
+    color: #000000; /* Texto gris claro para resaltar sobre el fondo */
+    margin-bottom: 10px;
     text-align: justify;
-    text-indent: 20px;
+    text-indent: 30px;
 }
 
 @media (max-width: 768px) {
