--- a/my-project/public/css/Header.css
+++ b/my-project/public/css/Header.css
@@ -9,7 +9,8 @@
 }
 
 .header {
-    background-color: #000000;
+    width: auto;
+    background-color: #000;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -191,4 +192,28 @@
 
 .logout-menu button:hover {
     background-color: #f0f0f0; 
+}
+
+
+/*Celulares chicos*/
+@media (max-height: 480px) {
+    
+}
+
+/*Celulares grandes*/
+@media (max-width: 768px) {
+    
+
+}
+
+/*Tablets*/
+@media (max-height: 1280px) {
+
+}
+
+.headerAux{
+    /*Tamaño de contenedores*/
+    width: 100%;
+    height: 300px;
+    border: 1px solid white;
 }
