--- a/my-project/public/css/escultores.css
+++ b/my-project/public/css/escultores.css
@@ -8,6 +8,10 @@
 
 .card-body {
     height: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 @media(max-width: 640px) {
