--- a/my-project/public/css/Header.css
+++ b/my-project/public/css/Header.css
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Nunito', sans-serif;
-    font-size: 20px;
+    font-size: 18px; /* Reducir el tamaño de fuente global */
 }
 
 .header {
@@ -14,8 +14,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100px;
-    padding: 5px 10%;
+    height: 80px; /* Reducir la altura del header */
+    padding: 5px 8%; /* Ajustar el padding */
 }
 
 .header .logo {
@@ -23,12 +23,12 @@
 }
 
 .header .logo img {
-    height: 70px;
+    height: 50px; /* Reducir la altura del logo */
     width: auto;
     transition: all 0.3s;
     border-radius: 50%;
-    margin-top: 10px;
-    margin-left: 20px;
+    margin-top: 5px; /* Ajustar margen */
+    margin-left: 10px; /* Ajustar margen */
 }
 
 .header .logo img:hover {
@@ -41,7 +41,7 @@
 
 .header .nav-links li {
     display: inline-block;
-    padding: 0 20px;
+    padding: 0 15px; /* Reducir padding */
 }
 
 .header .nav-links li:hover {
@@ -49,7 +49,7 @@
 }
 
 .header .nav-links a {
-    font-size: 700;
+    font-size: 16px; /* Ajustar tamaño de fuente */
     color: #9fa3a9;
     text-decoration: none;
 }
@@ -58,10 +58,10 @@
     color: #393d42;
 }
 
-.header .btn button , .header .menu button{
+.header .btn button, .header .menu button {
     font-weight: 700;
     color: #1f2124;
-    padding: 9px 25px;
+    padding: 7px 20px; /* Reducir padding */
     background: #6a6e73;
     border: none;
     border-radius: 50px;
@@ -72,7 +72,7 @@
 .header .btn {
     font-weight: 700;
     color: #1f2124;
-    padding: 9px 25px;
+    padding: 7px 20px; /* Reducir padding */
     background: #6a6e73;
     border: none;
     border-radius: 50px;
@@ -90,7 +90,7 @@
 .header .menu button {
     font-weight: 700;
     color: #1f2124;
-    padding: 9px 25px;
+    padding: 7px 20px; /* Reducir padding */
     background: #6a6e73;
     border: none;
     border-radius: 50px;
@@ -104,11 +104,9 @@
     transform: scale(1.1);
 }
 
-
 .menu {
     display: none;
 }
-
 
 @media screen and (max-width: 800px) {
     .nav-links, .btn {
@@ -134,9 +132,11 @@
     overflow: hidden;
     transition: width 0.3s ease 0s;
 }
+
 .header .overlay.open {
     width: 100%; /* Asegúrate de que se expanda a todo el ancho de la pantalla */
 }
+
 .header .overlay .overlay-content {
     display: flex;
     height: 100%;
@@ -147,14 +147,14 @@
 
 .header .overlay a {
     padding: 15px;
-    font-size: 36px;
+    font-size: 30px; /* Reducir el tamaño de fuente */
     display: block;
     transition: color 0.3s ease 0s;
     font-weight: 700;
     color: #9fa3a9;
 }
 
-.header .overlay a:hover, 
+.header .overlay a:hover,
 .header .overlay a:focus {
     color: #393d42;
 }
@@ -163,33 +163,31 @@
     position: absolute;
     top: 20px;
     right: 45px;
-    font-size: 65px;
+    font-size: 55px; /* Reducir el tamaño de fuente */
 }
 
 @media screen and (max-height: 450px) {
     .header .overlay a {
-        font-size: 20px;
+        font-size: 18px; /* Reducir el tamaño de fuente */
     }
     .header .overlay .close {
-        font-size: 40px;
+        font-size: 35px; /* Reducir el tamaño de fuente */
         top: 15px;
         right: 35px;
     }
 }
 
-
 .logout-menu button {
-    background-color: white; 
-    color: black;            
-    border: 1px solid black; 
-    padding: 2px 5px;     
-    border-radius: 5px;     
-    cursor: pointer;         
-    font-size: 16px;        
-    transition: background-color 0.3s; 
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    padding: 2px 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px; /* Reducir el tamaño de fuente */
+    transition: background-color 0.3s;
 }
 
-
 .logout-menu button:hover {
-    background-color: #f0f0f0; 
+    background-color: #f0f0f0;
 }
