--- a/my-project/public/css/ListaEscultoresQR.css
+++ b/my-project/public/css/ListaEscultoresQR.css
@@ -2,21 +2,21 @@
 .escultores-container {
   margin: 30px auto;
   padding: 30px;
-  max-width: 500px; /* Ancho fijo */
-  background-color: #333; /* Fondo oscuro para el contenedor */
+  max-width: 450px;
+  background-color: #1f2124; 
   color: hsl(0, 0%, 100%);
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Sombras suaves para un mejor diseño */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
 }
 
 /* Título */
 .escultores-container h2 {
   text-align: center;
-  color: #fff; /* Blanco */
+  color: #fff; 
   margin-bottom: 30px;
-  font-size: 35px; /* Tamaño del título */
-  font-weight: bold; /* Hacerlo más destacado */
-  text-transform: uppercase; /* Convertir el texto a mayúsculas */
+  font-size: 35px; 
+  font-weight: bold; 
+  text-transform: uppercase; 
 }
 
 /* Lista de escultores */
@@ -28,14 +28,14 @@
 
 /* Cada ítem de la lista */
 .escultor-item {
-  background-color: #444; /* Fondo más claro para los elementos */
+  background-color: #393d42; 
   padding: 10px 15px;
   margin: 10px 0;
-  border-radius: 8px; /* Bordes redondeados */
+  border-radius: 8px; 
   display: flex;
-  justify-content: space-between; /* Mantener elementos alineados hacia la izquierda */
+  justify-content: space-between; 
   align-items: center;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra sutil */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
 }
 
 /* Nombre del escultor */
@@ -43,14 +43,15 @@
   color: #fff;
   margin: 0;
   font-size: 20px;
-  font-weight: normal; /* Estilo más ligero */
-  flex-grow: 1; /* Permitir que el nombre del escultor ocupe el espacio disponible */
+  font-weight: normal; 
+  flex-grow: 1; 
+  margin-right: 15px;
 }
 
 /* Estilo del botón */
 .view-details-btn {
   padding: 8px 20px;
-  background-color: #007bff; /* Azul para el botón */
+  background-color: #007bff; 
   color: white;
   border: none;
   border-radius: 5px;
@@ -58,12 +59,11 @@
   text-decoration: none;
   font-size: 20px;
   transition: background-color 0.3s ease;
-  flex-grow: 0; /* No permitir que el botón ocupe más espacio del necesario */
 }
 
 /* Efecto hover en el botón */
 .view-details-btn:hover {
-  background-color: #0056b3; /* Azul más oscuro cuando se pasa el mouse */
+  background-color: #0056b3; 
 }
 
 .search-input {
@@ -73,4 +73,27 @@
   margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
+}
+
+.scroll-container {
+  max-height: 60vh; 
+  overflow-y: auto; 
+  padding: 0.5rem; 
+  border: 1px solid #393d42; 
+  border-radius: 0.5rem; 
+  background-color: #393d42; 
+}
+
+.escultores-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.escultor-item {
+  margin-bottom: 1rem; 
+  padding: 0.5rem;
+  background: #6a6e73;
+  border: 1px solid #6a6e73;
+  border-radius: 0.5rem;
 }
